<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="StringFormatMatches">
	
	
	<string name="app_version">1.2.9</string>
	
	
	<string name="app_website">http://pocketvoa.72pines.com</string>
	<string name="app_license">Apache License, Version 2.0</string>
	<string name="app_email">shaobin0604@qq.com</string>

	<string name="hello">Hello World, Main!</string>
	<string name="app_name">Pocket VOA</string>
	<string name="app_version_label">Version: </string>	
	<string name="app_author_label">Author: </string>
	<string name="app_author">Bin Shao</string>
	<string name="app_license_label">License: </string>
	<string name="app_website_label">Website: </string>
	
	
	<!-- for activity title -->
	<string name="ac_title_help">Help</string>
	<string name="ac_title_settings">Settings</string>
	
	<string name="no_data">No Data :-(</string>
	<string name="no_lyric">Cannot Load Lyric :-(</string>
	
	<string name="alert_title_what_is_new">What\'s New?</string>
	
	<string name="alert_title_internet_status">Internet Connection Status</string>
	<string name="alert_msg_internet_status_connected">Connected</string>
	<string name="alert_msg_internet_status_disconnected">Disconnected</string>
	
	<string name="alert_title_confirm_exit">Exit App?</string>
	<string name="alert_button_exit">Exit</string>
	<string name="alert_button_go_background">Background</string>
	
	
	<string name="alert_title_about">About</string>
	
	<string name="alert_title_select_action">Please choose an action</string>
	
	<string name="alert_title_confirm_delete">Confirm Delete</string>
	<string name="alert_msg_confirm_delete">Are you sure you want to delete article \"%1$s\"?</string>
	
	<string name="alert_title_confirm_download">Confirm Download</string>
	<string name="alert_msg_confirm_download">You have already downloaded this article \"%1$s\" before, are you sure you want to redownload it?</string>
	
	<string name="alert_title_error">Error Occurred</string>
	
	<string name="alert_msg_load_remote_page_error">Cannot load remote webpage</string>
	<string name="alert_msg_load_local_page_error">Cannot load lcoal webpage</string>
	
	<string name="alert_msg_play_remote_audio_error">Cannot play remote audio</string>
	<string name="alert_msg_play_local_audio_error">Cannot play local audio</string>
	
	<string name="alert_msg_download_error">Cannot download article</string>
	<string name="alert_msg_download_audio_error">Cannot download audio</string>
	<string name="alert_msg_download_text_error">Cannot download text</string>
	
	<string name="alert_msg_loadlist_error">Cannot load list</string>
	
	<!-- Dialog box title -->
    <string name="service_start_error_title">Playback problem</string>
    <!-- Dialog box message -->
    <string name="service_start_error_msg">Sorry, the audio could not be played.</string>
    <!-- Dialog box button -->
    <string name="service_start_error_button">OK</string>
	
	<string name="progressbar_download_title">Downloading audio file</string>
	<string name="progressspin_loadpage_msg">Loading...</string>
	<string name="progressspin_loadlist_msg">Loading...</string>
	
	<string name="toast_open_context_menu">Long click list item to open context menu</string>
	<string name="toast_article_deleted">Article deleted</string>
	<string name="toast_download_start">Added to download queue</string>
	<string name="toast_download_audio_complete">Download audio complete</string>
	<string name="toast_download_text_complete">Download text complete</string>
	
	<string name="menu_help">Help</string>
	<string name="menu_change_log">Change Log</string>
	<string name="menu_internet_status">Internet Status</string>
	
	<string name="menu_download">Download</string>
	<string name="menu_original">Original</string>
	<string name="menu_translation">Translation</string>
	<string name="menu_lrc">Lyric</string>
	
	<string name="menu_about">About</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_exit">Exit</string>
	<string name="menu_view">View</string>
	<string name="menu_delete">Delete</string>
	
	<string name="btn_retry">Retry</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_ok">OK</string>
	<string name="btn_refresh">Refresh</string>
	<string name="btn_yes">Yes</string>
	<string name="btn_no">No</string>
	
	<string name="tab_local">Local</string>
	<string name="tab_remote">Remote</string>
	
	<string name="prefs_list_count_key">list_count</string>
	<string name="prefs_list_count_title">Max Count</string>
	<string name="prefs_list_count_summary">Select max number of entries to display in remote article list</string>
	<string name="prefs_list_count_dialog_title">Choose a max count</string>
	
	<string name="prefs_datasource_key">data_source</string>
	<string name="prefs_datasource_title">Data Source</string>
	<string name="prefs_datasource_summary">Select the data source where the articles come from</string>
	<string name="prefs_datasource_dialog_title">Choose a data source</string>
	
	<string name="notification_download_text_error_ticker">Download Text Error</string>
	<string name="notification_download_audio_error_ticker">Download MP3 Error</string>
	<string name="notification_download_textzh_error_ticker">Download Text Translated Error</string>
	<string name="notification_download_lyric_error_ticker">Download Lyric Error</string>
	
	<string name="notification_download_text_success_ticker">Download Text Complete</string>
	<string name="notification_download_audio_success_ticker">Download MP3 Complete</string>
	<string name="notification_download_textzh_success_ticker">Download Text Translated Complete</string>
	<string name="notification_download_lyric_success_ticker">Download Lyric Complete</string>
	
	<string name="notification_download_text_progress_ticker">Downloading Text</string>
	<string name="notification_download_audio_progress_ticker">Downloading MP3</string>
	<string name="notification_download_textzh_progress_ticker">Downloading Text Translated</string>
	<string name="notification_download_lyric_progress_ticker">Downloading Lyric</string>
	
	<string name="notification_download_text_progress_content">Downloading Text %1$d%% [%2$d/%3$d]KB</string>
	<string name="notification_download_audio_progress_content">Downloading MP3 %1$d%% [%2$d/%3$d]KB</string>
	<string name="notification_download_textzh_progress_content">Downloading Text Translated %1$d%% [%2$d/%3$d]KB</string>
	<string name="notification_download_lyric_progress_content">Downloading Lyric %1$d%% [%2$d/%3$d]KB</string>
	
	<string name="prefs_category_title_general_settings">General Settings</string>
    <string name="prefs_category_title_info">Information</string>
    
    <string name="prefs_title_whatsnew">What\'s New?</string>
    <string name="prefs_title_help">Help</string>
    <string name="prefs_title_about">About</string>
    
    <string name="prefs_key_whatsnew">prefs_key_whatsnew</string>
    <string name="prefs_key_help">prefs_key_help</string>
    <string name="prefs_key_about">prefs_key_about</string>
    
    <!-- crash report dialog resource -->
    <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
	<string name="crash_notif_title">Pocket VOA has crashed...</string>
	<string name="crash_notif_text">Please click here to help fix the issue.</string>

	<string name="crash_dialog_title">Pocket VOA has crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the
		application to stop. Please help us fix this by sending us error data,
		all you have to do is click \'OK\'.</string>
	<string name="crash_dialog_comment_prompt">You might add your comments about the problem
		below:</string>
	<string name="crash_dialog_ok_toast">Thank you !</string>
	
	<!-- crash report preference -->
	<string name="prefs_key_acra.disable">acra.disable</string>
	<string name="prefs_title_disable_acra">Disable Crash Report</string>
	
	<!-- keep screen on preference -->
	<string name="prefs_key_keep_screen_on">prefs_key_keep_screen_on</string>
	<string name="prefs_title_keep_screen_on">Keep Screen On</string>
	<string name="prefs_summary_keep_screen_on">keep screen on when show article</string>
	
	<!-- data backup restore preference -->
	<string name="prefs_key_data_backup">prefs_key_data_backup</string>
	<string name="prefs_key_data_restore">prefs_key_data_restore</string>
	
	<string name="prefs_category_data_backup_restore">Database backup&amp;restore</string>
	<string name="prefs_title_data_backup">Backup</string>
	<string name="prefs_title_data_restore">Restore</string>
	
	<string name="prefs_summary_data_restore">Last backup time: %1$s</string>
	<string name="menu_backup">Backup&amp;restore</string>
	
	<string name="toast_backup_successful">Database backup successful!</string>
	<string name="toast_backup_failed">Database backup failed!</string>
	
	<string name="toast_restore_successful">Database restore successful!</string>
	<string name="toast_restore_failed">Database restore failed!</string>
	
	<!-- Font size Settings -->
	<string name="prefs_key_font_size">prefs_key_font_size</string>
	<string name="prefs_default_font_size">NORMAL</string>
	
	<string name="prefs_title_font_size">Text size</string>
<string name="menu_main">Home</string>
<string name="tab_translation">Translation</string>
    <string name="tab_origin">Original</string>
    <string name="tab_lyric">Lyric</string>
	<string name="title_update">Software Upgrade</string>
    <string name="msg_update_new_version">New release available, upgrade?\n\n%1$s</string>
	<string name="toast_no_network">No network connection</string>
    
    <string name="toast_no_need_upgrade">You have the latest version.</string>
<string name="prefs_title_more_apps">More Apps</string>
    <string name="menu_upgrade">Check Update</string>
    <string name="prefs_key_more_apps">prefs_key_more_apps</string>
    <string name="msg_checking_update">Checking upgrade...</string>
<string name="btn_more_apps">More Apps</string>
</resources>
