<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/root_about"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>
	<ImageView
		android:id="@+id/iv_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="10.0dip"
		android:layout_marginTop="10.0dip"
		android:src="@drawable/icon"
		>
	</ImageView>
	<TextView
		android:id="@+id/tv_app_name"
		android:textStyle="bold"
		android:textColor="#FFFFFFFF"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="20.0dip"
		android:layout_marginTop="8.0dip"
		android:text="@string/app_name"
		android:layout_toRightOf="@id/iv_icon"
		android:layout_alignTop="@id/iv_icon"
		>
	</TextView>
	<TextView
		android:textSize="12.0dip"
		android:id="@+id/tv_app_version_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_version_text"
		android:layout_below="@id/tv_app_name"
		android:layout_alignLeft="@id/tv_app_name"
		>
	</TextView>
	<TextView
		android:textSize="12.0dip"
		android:id="@+id/tv_app_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_version"
		android:layout_below="@id/tv_app_name"
		android:layout_toRightOf="@id/tv_app_version_text"
		>
	</TextView>
	<TextView
		android:textSize="12.0dip"
		android:autoLink="email"
		android:id="@+id/tv_author"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20.0dip"
		android:text="@string/app_author"
		android:layout_below="@id/iv_icon"
		android:layout_centerHorizontal="true"
		>
	</TextView>
	<TextView
		android:textSize="12.0dip"
		android:id="@+id/tv_license"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_license"
		android:layout_below="@id/tv_author"
		android:layout_centerHorizontal="true"
		>
	</TextView>
	<TextView
		android:textSize="12.0dip"
		android:autoLink="web"
		android:linksClickable="true"
		android:id="@+id/tv_website"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10.0dip"
		android:text="@string/app_website"
		android:layout_below="@id/tv_license"
		android:layout_centerHorizontal="true"
		>
	</TextView>
</RelativeLayout>
